# PostCix

./: .buildconfig  compile_mixer.sh  compile_ymusic.sh  configure.ac  mixer.vala  note  note.vala  org.gnome.Postcix.json  org.gnome.Postico.json  postcix  run.sh  wmixer  x  x.vala  xx  ymusic  ymusic.vala
.postcix/: settings.conf  sql.cache
img/: logo.psd  logo_dark.paint
src/: Makefile.am  database_item.vala  database_view.vala  favorite_view.vala  host_item.vala  image_manager.vala  io.vala  main.vala  map.vala  postgres.vala  setting.vala  treeview_enum.vala
